--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
     }
 }
 
+ext {
+    roomVersion = "1.1.1"
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: '*.jar')
     implementation 'com.codepath.libraries:android-oauth-handler:1.4.0'
@@ -55,4 +59,9 @@ dependencies {
     //ButterKnife
     implementation 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    implementation 'com.android.support:mediarouter-v7:28.0.0'
+    // Room for simple persistence with an ORM
+    implementation "android.arch.persistence.room:runtime:$roomVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$roomVersion"
+
 }
